@@ -307,11 +307,12 @@ else
 			<p class="pagetext"><?php echo lang('name')?>:</p>
 			<p class="pageinput"><input type="text" name="htmlblob" maxlength="255" value="<?php echo $htmlblob?>" class="standard" /></p>
 		</div>
-                <div class="pageoverflow">
+                
 			<?php if (get_site_preference('nogcbwysiwyg','0') == '0') { ?>
-		      <p class="pagetext"><?php echo lang('use_wysiwyg') ?>:</p>
-						      <p class="pagetext"><input type="hidden" name="use_wysiwyg" value="0"/><input type="checkbox" name="use_wysiwyg" onclick="this.form.submit();" value="1" <?php if($use_wysiwyg) echo ' checked="checked"' ?>/></p>
-                </div>					
+			<div class="pageoverflow">
+				<p class="pagetext"><?php echo lang('use_wysiwyg') ?>:</p>
+				<p class="pagetext"><input type="hidden" name="use_wysiwyg" value="0"/><input type="checkbox" name="use_wysiwyg" onclick="this.form.submit();" value="1" <?php if($use_wysiwyg) echo ' checked="checked"' ?>/></p>
+            </div>					
 			<?php } ?>      
 		<div class="pageoverflow">
 			<p class="pagetext">*<?php echo lang('content')?>:</p>
